--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # Production Environment Variables
-MONGODB_URI=mongodb://mongo:27017/dido_business
+# Database - SQLite (file-based, no setup required)
+# DATABASE_URL is automatically set to ./database.sqlite
 JWT_SECRET=change_this_to_a_very_secure_random_string_in_production
 JWT_EXPIRE=7d
 NODE_ENV=production
