--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,8 @@
 # Environment Variables
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/business_website
+# Database - SQLite (file-based, no setup required)
+# DATABASE_URL=./database.sqlite
 JWT_SECRET=your_super_secret_jwt_key_here_change_in_production
 JWT_EXPIRE=30d
 
