--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,6 @@
 version: '3.8'
 
 services:
-  # MongoDB Database
-  mongodb:
-    image: mongo:7.0
-    container_name: business_website_db
-    restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
-      MONGO_INITDB_DATABASE: business_website
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
-      - ./docker/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    networks:
-      - business_network
-
   # Backend API
   backend:
     build:
@@ -28,7 +11,6 @@ services:
     environment:
       NODE_ENV: production
       PORT: 5000
-      MONGODB_URI: mongodb://admin:password123@mongodb:27017/business_website?authSource=admin
       JWT_SECRET: your_super_secret_jwt_key_change_in_production
       JWT_EXPIRE: 30d
       EMAIL_HOST: smtp.gmail.com
@@ -45,8 +27,7 @@ services:
       - "5000:5000"
     volumes:
       - ./backend/uploads:/app/uploads
-    depends_on:
-      - mongodb
+      - ./backend/database.sqlite:/app/database.sqlite
     networks:
       - business_network
 
@@ -60,7 +41,7 @@ services:
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:5000/api
       NEXT_PUBLIC_CLIENT_URL: http://localhost:3000
-      NEXT_PUBLIC_BUSINESS_NAME: Your Business Name
+      NEXT_PUBLIC_BUSINESS_NAME: MachinesMart
       NEXT_PUBLIC_BUSINESS_EMAIL: info@yourbusiness.com
       NEXT_PUBLIC_BUSINESS_PHONE: +254700000000
       NEXT_PUBLIC_BUSINESS_ADDRESS: Your Business Address
@@ -92,8 +73,8 @@ services:
       - business_network
 
 volumes:
-  mongodb_data:
-    driver: local
+  # SQLite database will be stored in the backend/database directory
+  # which is mounted as a volume for persistence
 
 networks:
   business_network:
