--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables
 # Database - SQLite (file-based, no setup required)
 # DATABASE_URL is automatically set to ./database.sqlite
-JWT_SECRET=change_this_to_a_very_secure_random_string_in_production
-JWT_EXPIRE=7d
+JWT_SECRET=DIDOmart2025
+JWT_EXPIRE=100d
 NODE_ENV=production
 PORT=5000
 
@@ -21,7 +21,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # Admin Account (for seeding)
-ADMIN_EMAIL=admin@dido.com
-ADMIN_PASSWORD=admin123456
-ADMIN_FIRST_NAME=Admin
-ADMIN_LAST_NAME=User
+ADMIN_EMAIL=sam@machinesmart.tech
+ADMIN_PASSWORD=Machines2025!!
+ADMIN_FIRST_NAME=Sam
+ADMIN_LAST_NAME=Tatty
