--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,8 @@
 NODE_ENV=development
 PORT=5000
 # Database - SQLite (file-based, no setup required)
-# DATABASE_URL=./database.sqlite
-JWT_SECRET=your_super_secret_jwt_key_here_change_in_production
+DATABASE_URL=./database.sqlite
+JWT_SECRET=DIDOmart2025
 JWT_EXPIRE=30d
 
 # Email Configuration (using Gmail as example)
@@ -21,5 +21,8 @@ FILE_UPLOAD_PATH=./uploads
 CLIENT_URL=http://localhost:3000
 
 # Admin Configuration
-ADMIN_EMAIL=admin@yourbusiness.com
-ADMIN_PASSWORD=AdminPassword123!
+# Admin Account (for seeding)
+ADMIN_EMAIL=sam@machinesmart.tech
+ADMIN_PASSWORD=Machines2025!!
+ADMIN_FIRST_NAME=Sam
+ADMIN_LAST_NAME=Tatty
