--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,61 +1,49 @@
-upstream backend {
-    server backend:5000;
-}
-
+# Define upstream servers for frontend and backend containers
 upstream frontend {
     server frontend:3000;
 }
 
+upstream backend {
+    server backend:5000;
+}
+
+# Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    server_name localhost;
+    server_name machinesmart.tech www.machinesmart.tech;
+    return 301 https://$host$request_uri;
+}
 
-    # Frontend routes
+# Main server configuration for HTTPS
+server {
+    listen 443 ssl http2;
+    server_name machinesmart.tech www.machinesmart.tech;
+
+    # SSL Certificate paths (inside the container)
+    ssl_certificate /etc/letsencrypt/live/machinesmart.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/machinesmart.tech/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    # Proxy to frontend
     location / {
         proxy_pass http://frontend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 
-    # API routes
-    location /api/ {
+    # Proxy to backend API and uploads
+    location ~ ^/(api|uploads)/ {
         proxy_pass http://backend;
-        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Handle file uploads
+        proxy_set_header X-Forwarded-Proto https;
         client_max_body_size 10M;
     }
-
-    # Static files from backend (uploads)
-    location /uploads/ {
-        proxy_pass http://backend;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json;
 }
