--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,30 @@
 # Frontend Environment Variables (Production)
-NEXT_PUBLIC_API_URL=http://localhost/api
-NEXT_PUBLIC_BASE_URL=http://localhost
+NEXT_PUBLIC_API_URL=https://machinesmart.tech/api
+NEXT_PUBLIC_BASE_URL=https://machinesmart.tech/
+# Production Environment Variables
+# Database - SQLite (file-based, no setup required)
+# DATABASE_URL is automatically set to ./database.sqlite
+JWT_SECRET=DIDOmart2025
+JWT_EXPIRE=100d
+NODE_ENV=production
+PORT=5000
+
+# Email Configuration (Replace with your SMTP settings)
+EMAIL_SERVICE=gmail
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-specific-password
+EMAIL_FROM=your-business@gmail.com
+
+# File Upload Configuration
+UPLOAD_PATH=uploads
+MAX_FILE_SIZE=5242880
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Admin Account (for seeding)
+ADMIN_EMAIL=sam@machinesmart.tech
+ADMIN_PASSWORD=Machines2025!!
+ADMIN_FIRST_NAME=Sam
+ADMIN_LAST_NAME=Tatty
